[89525662] Fix alignment of icons in search results

--- a/app/assets/stylesheets/_layout.css.sass
+++ b/app/assets/stylesheets/_layout.css.sass
@@ -108,6 +108,9 @@
 .vertical_align_middle
   vertical-align: middle
 
+.vertical_align_text_bottom
+  vertical-align: text-bottom
+
 .hidden
   display: none
 
